--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "framer-motion": "^12.34.0",
     "lucide-react": "^0.568.0",
     "react": "^19.2.4",
-    "react-dom": "^19.2.4"
+    "react-dom": "^19.2.4",
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@sentry/vite-plugin": "^4.9.1",
